--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,32 @@
     transform: rotate(360deg);
   }
 }
+/* //////////////////////////////////////////////////// */
+
+h1{
+  color:#FF7700;
+}
+h2{
+  color: #00FFC6;
+}
+
+button{
+  border-radius: 25rem;
+  background-color: #E04D01;
+  color: aliceblue;
+  height: 2rem;
+  margin-bottom: 0.5rem;
+}
+button:hover {
+  background-color: #FF7700;
+  
+}
+
+input{
+  border-radius: 25rem;
+  height: 2rem;
+  width: 15rem;
+  color: black;
+  margin: 0.5rem ;
+}
+
